机构管理功能基本实现